--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -990,6 +990,7 @@ inserted.
 </li><li>YEAR data type is treated like SMALLINT data type.
 </li><li>GROUP BY clause can contain 1-based positions of expressions from the SELECT list.
 </li><li>Unsafe comparison operators between numeric and boolean values are allowed.
+</li><li>Accepts non-standard JSON_OBJECT and JSON_OBJECTAGG syntax using comma as key/value separator.
 </li></ul>
 <p>
 Text comparison in MariaDB is case insensitive by default, while in H2 it is case sensitive (as in most other databases).
@@ -1031,6 +1032,7 @@ and create a unique constraint automatically if such constraint doesn't exist.
 </li><li>YEAR data type is treated like SMALLINT data type.
 </li><li>GROUP BY clause can contain 1-based positions of expressions from the SELECT list.
 </li><li>Unsafe comparison operators between numeric and boolean values are allowed.
+</li><li>Accepts non-standard JSON_OBJECT and JSON_OBJECTAGG syntax using comma as key/value separator.
 </li></ul>
 <p>
 Text comparison in MySQL is case insensitive by default, while in H2 it is case sensitive (as in most other databases).
