--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3597: Support array element assignments in UPDATE statements
+</li>
 <li>Issue #3599: [2.1.214][MariaDB] DELETE query failure
 </li>
 <li>Issue #3600: NPE in MVTable.lock(), version 2.1.214
