Add experimental configuration for GraalVM's native-image tool

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3606: Support for GraalVMs native-image
+</li>
 <li>Issue #3607: [MySQL] UNIX_TIMESTAMP should return NULL
 </li>
 <li>Issue #3604: Improper FROM_1X implementation corrupts some BLOBs during migration
