Fix WebApp.addTableOrView() for DBMS without INFORMATION_SCHEMA.VIEWS

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3615: H2 Console connecting to Oracle DB will not show the list of tables
+</li>
+<li>PR #3613: Fix infinite loop in Tokenizer when special whitespace character is used
+</li>
 <li>Issue #3606: Support for GraalVMs native-image
 </li>
 <li>Issue #3607: [MySQL] UNIX_TIMESTAMP should return NULL
